Email Service: Добавлена логика отвязки почты. Внесены изменения в систему работы с почтой

--- a/app/core/src/services/templates/verification_code.html
+++ b/app/core/src/services/templates/verification_code.html
@@ -11,7 +11,7 @@
     <div style="padding: 30px; background: #f9f9f9;">
         <p>Здравствуйте, <strong>{{ username }}</strong>!</p>
 
-        <p>Ваш код подтверждения для привязки электронной почты к аккаунту:</p>
+        <p>Ваш код подтверждения для {{ verify_type }} электронной почты к аккаунту:</p>
 
         <div style="background: #BDAAFD; color: white; font-size: 32px;
                     padding: 15px; text-align: center; letter-spacing: 8px;
